tests/paczka2/big_fuzzy/80098427.err
Error in line 4: AsQ5A S90 94,9
Error in line 6: A575 S32 39,5
Error in line 11: Dc S32 4,2
Error in line 14: 1k76tYxOO0J A575 681,8
Error in line 30: XWmK9 A575 84,2
Error in line 16: 1k76tYxOO0J S90 17,7
Error in line 38: A575 S90 43,0
Error in line 56: Zai S32 69,06
Error in line 40: 1k76tYxOO0J S527 2,6
Error in line 57: Dci S527 12,7
Error in line 53: A575 S32 185,3
Error in line 62: XWmK9 S90 36,5
Error in line 67: 1k76tYxOO0J S527 26,61
Error in line 61: 1k76tYxOO0J S90 59,9
Error in line 74: Dci S90 30,4
Error in line 87: Zai A575 48,4
Error in line 83: A575 S90 61,3
Error in line 92: XWmK9 S32 20,
Error in line 100: A575 A575 88,1
Error in line 99: Zai S32 11,9
Error in line 121: Zai A575 20,1
Error in line 132: 01OSFr A575 28,1
Error in line 129: Dci S527 58,8
Error in line 139: A575 S32 86,8
Error in line 141: A575 A575 39,0
Error in line 153: Zai S90 -2,5
Error in line 145: 01OSFr S32 397,5
Error in line 135: AsQ5A A575 55,3
Error in line 170: Dci A575 45,8
Error in line 171: 1k76tYxOO0J S32 58,4
Error in line 173: 1k76tYxOO0J A575 16,6
Error in line 169: XWmK9 S32 70,8
Error in line 181: 01OSFr S90 61,61
Error in line 178: 01OSFr S32 61,5
Error in line 183: AsQ5A A575 89,1
Error in line 184: 01OSFr S90 185,1
Error in line 149: Zai S90 24,7
Error in line 190: 1k76tYxOO0J S90 8,3
Error in line 192: Zai S32 70,2
Error in line 176: A575 A575 47,5
Error in line 202: A575 S32 77,1
Error in line 208: A575 S527 48,7
Error in line 211: A575 S32 40,5
Error in line 234: Zai S9T 75,1
Error in line 232: Zai S32 62,9
Error in line 241: Zai A575 58,7
Error in line 242: Zai S32 55,2
Error in line 239: AsQ5A S90 52,6
Error in line 246: AsQ5A S527 83,8
